// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip renders correctly 1`] = `
Array [
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3C81BE",
            "borderRadius": 3,
            "bottom": 5,
            "left": -128,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": 256,
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingVertical": 20,
              "textAlign": "center",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#3C81BE",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 122,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>,
  "bar",
]
`;

exports[`Tooltip renders correctly width supplied width 1`] = `
Array [
  <View>
    <View
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3C81BE",
            "borderRadius": 3,
            "bottom": 5,
            "left": -128,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 3,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "width": "100",
          }
        }
      >
        <View
          style={
            Object {
              "height": 16,
              "opacity": 1,
              "position": "absolute",
              "right": 5,
              "top": 10,
              "width": 16,
              "zIndex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "height": 16,
                "left": 5,
                "position": "absolute",
                "top": -2,
                "transform": Array [
                  Object {
                    "rotate": "-45deg",
                  },
                ],
                "width": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "GillSansMTStd-Medium",
              "fontSize": 16,
              "lineHeight": 18,
              "paddingHorizontal": 30,
              "paddingVertical": 20,
              "textAlign": "center",
            }
          }
        >
          <Text>
            foo
          </Text>
        </Text>
        <View
          style={
            Object {
              "backgroundColor": "transparent",
              "borderBottomWidth": 8,
              "borderColor": "#3C81BE",
              "borderLeftColor": "transparent",
              "borderLeftWidth": 12,
              "borderRadius": 3,
              "borderRightColor": "transparent",
              "borderRightWidth": 12,
              "borderStyle": "solid",
              "bottom": -7,
              "left": 44,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": -3,
                "width": -3,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 4,
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            }
          }
        />
      </View>
    </View>
  </View>,
  "bar",
]
`;
